--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
+    "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-query": "^5.81.5",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.13",
     "viem": "^2.31.6",
     "wagmi": "^2.16.3"
   },
@@ -25,6 +27,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "postcss": "^8.5.6",
     "typescript": "^5"
   }
 }
